# MLToolkit

./: .gitignore
.github/workflows/: codeql.yml
MLToolkit/: CMakeLists.txt  CMakeSettings.json
MLToolkit/data/: testdata.txt
MLToolkit/data/notebooks/: mnist_formatting.ipynb
MLToolkit/include/: FileData.h  data.h  matrix.h  mltoolkit.h  model.h  modelmutator.h  neuralnetwork.h  neuralnetworkmutator.h  test.h  trainer.h
MLToolkit/src/: CMakeLists.txt  data.cc  filedata.cc  main.cc  matrix.cc  neuralnetwork.cc  neuralnetworkmutator.cc  trainer.cc
MLToolkit/test/: CMakeLists.txt  main.cc  matrix_test.cc  neuralnetwork_test.cc  neuralnetworkmutator_test.cc  test_test.cc  trainer_test.cc  utility.cc
